--- a/app/src/main/res/layout/item_pdfthree.xml
+++ b/app/src/main/res/layout/item_pdfthree.xml
@@ -1,59 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/value_80"
-    android:paddingLeft="@dimen/value_10"
-    android:paddingRight="@dimen/value_10">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_item_pdfthree"
-        android:layout_width="@dimen/value_60"
-        android:layout_height="@dimen/value_60"
-        android:layout_centerVertical="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/value_80"
+        android:paddingLeft="@dimen/value_10"
+        android:paddingRight="@dimen/value_10">
 
-    <com.wenld.sample_filedownload.widgets.FlikerProgressBar
-        android:id="@+id/flikerbar_item_pdfthree"
-        android:layout_width="@dimen/value_60"
-        android:layout_height="@dimen/value_25"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        app:FlikerProgressBar_textSize="@dimen/size_zt_12"
-        app:loadingColor="#1EC2B6"
-        app:stopColor="#FFAF31" />
+        <ImageView
+            android:id="@+id/iv_item_pdfthree"
+            android:layout_width="@dimen/value_60"
+            android:layout_height="@dimen/value_60"
+            android:layout_centerVertical="true" />
+
+        <com.wenld.sample_filedownload.widgets.FlikerProgressBar
+            android:id="@+id/flikerbar_item_pdfthree"
+            android:layout_width="@dimen/value_60"
+            android:layout_height="@dimen/value_25"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            app:FlikerProgressBar_textSize="@dimen/size_zt_12"
+            app:loadingColor="#1EC2B6"
+            app:stopColor="#FFAF31" />
+
+        <LinearLayout
+            android:layout_width="@dimen/value_250"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/flikerbar_item_pdfthree"
+            android:layout_toRightOf="@id/iv_item_pdfthree"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_item_pdfthree"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/value_30"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/value_15"
+                android:text="色彩搭配技巧"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_zt_14" />
+
+            <TextView
+                android:id="@+id/tv_memo_item_pdfthree"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/value_30"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/value_15"
+                android:text="出处："
+                android:textSize="@dimen/size_zt_13" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="@dimen/value_250"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/flikerbar_item_pdfthree"
-        android:layout_toRightOf="@id/iv_item_pdfthree"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_item_pdfthree"
+        <Button
+            android:id="@+id/btn_start"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/value_30"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:paddingLeft="@dimen/value_15"
-            android:text="色彩搭配技巧"
-            android:textColor="@color/black"
-            android:textSize="@dimen/size_zt_14" />
+            android:layout_height="wrap_content"
+            android:text="开始" />
 
-        <TextView
-            android:id="@+id/tv_memo_item_pdfthree"
+        <Button
+            android:id="@+id/btn_stop"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/value_30"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:paddingLeft="@dimen/value_15"
-            android:text="出处："
-            android:textSize="@dimen/size_zt_13" />
+            android:layout_height="wrap_content"
+            android:text="暂停" />
+
+        <Button
+            android:id="@+id/btn_reload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="重新下载" />
+
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="删除" />
+
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/value_1"
-        android:layout_alignParentBottom="true" />
-</RelativeLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@color/blue_light" />
+</LinearLayout>
